sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: not found: value swapped
        swapped=true 
        ^AlgGnomeSort:15: error: not found: value getCountValue
  } while ((i>0)&&(i<getCountValue()))
                     ^